<resources>
    <string name="app_name">Registration App</string>
    <string name="title">Registration Form</string>
    <string name="sub_title">Welcome to Adventure Learning Club!</string>
    <string name="label1">Full Name</string>
    <string name="label2">Gender</string>
    <string name="label3">Student ID</string>
    <string name="label4">School</string>
    <string name="label5">Email</string>
    <string name="label6">Mobile</string>
    <string name="hint1">First Name</string>
    <string name="hint2">Last Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="submit">Submit</string>
</resources>